# niwa-api-client

./: README.md  pyproject.toml  pytest.ini
niwa_api/: __init__.py  cli.py  tideclient.py
niwa_api_client/: __init__.py  cli.py  tideclient.py
tests/: tideclient_test.py
