[project]
name = "niwa-api-client"
version = "0.1.6"
description = "Client for NIWA's APIs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.2",
    "typer>=0.12.5",
]

[tool.uv]
dev-dependencies = [
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.32.0",
]

[project.scripts]
niwa-tides = "niwa_api.cli:app"
